add compose, fix business logic
