# docs/swagger.json
@@ -17,34 +17,6 @@
     "basePath": "/api",
     "paths": {
         "/v1/ad": {
-            "post": {
-                "security": [
-                    {
-                        "nil": []
-                    }
-                ],
-                "description": "Create a new ad.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ad"
-                ],
-                "summary": "create a new ad",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Ads"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/ad/{id}": {
             "get": {
                 "description": "Get ad by given ID.",
                 "consumes": [
@@ -57,20 +29,62 @@
                     "Ad"
                 ],
                 "summary": "get ad by given ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Ad ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Ads"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new ad.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ad"
+                ],
+                "summary": "create a new ad",
+                "responses": {
+                    "201": {
+                        "description": "ID",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -98,6 +112,18 @@
                                 "$ref": "#/definitions/models.Ads"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -108,7 +134,6 @@
             "type": "object",
             "required": [
                 "about",
-                "id",
                 "name",
                 "photos"
             ],
@@ -126,22 +151,12 @@
                     "type": "string"
                 },
                 "photos": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                    "type": "string"
                 },
                 "price": {
                     "type": "integer"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
