# internal/routes/public_routes.go
@@ -10,8 +10,8 @@ import (
 // PublicRoutes func for describe group of public routes.
 func PublicRoutes(router *mux.Router) {
 	// Routes for GET method:
-	router.HandleFunc("/api/v1/ad/{id}", controllers.GetAd).Methods(http.MethodGet) // get one ad by ID
-	router.HandleFunc("/api/v1/ads", controllers.GetAds).Methods(http.MethodGet)    // Get list of all ads TODO pagination and sort
+	router.HandleFunc("/api/v1/ad", controllers.GetAd).Methods(http.MethodGet)   // get one ad by ID
+	router.HandleFunc("/api/v1/ads", controllers.GetAds).Methods(http.MethodGet) // Get list of all ads TODO pagination and sort
 
 	// Routes for POST method:
 	router.HandleFunc("/api/v1/ad", controllers.CreateAd).Methods(http.MethodPost) // create new ad
